src/snapshots/aviutl2_track_parser__tests__parse_with_movement.snap
---
source: src/lib.rs
expression: parsed
---
Track {
    values: [
        50.0,
        100.0,
    ],
    precision: 3,
    flag: TrackFlag(
        ACCELERATE | DECELERATE,
    ),
    movement: Some(
        Movement {
            name: "直線移動",
            parameters: [],
        },
    ),
    time_control_points: None,
    reference: None,
}
