src/snapshots/aviutl2_track_parser__tests__parse_with_params_and_full_timecontrol.snap
---
source: src/lib.rs
expression: parsed
---
Track {
    values: [
        50.0,
        100.0,
    ],
    precision: 3,
    flag: TrackFlag(
        0x0,
    ),
    movement: Some(
        Movement {
            name: "コマ落ち時間制御@Basic_S",
            parameters: [
                0.0,
                0.5,
                1.0,
                1.0,
                0.0,
                0.0,
                0.0,
                360.0,
                0.0,
            ],
        },
    ),
    time_control_points: Some(
        [
            TimeControlPoint {
                coordinate: (
                    0.0,
                    0.538889,
                ),
                handle_offset: (
                    0.25,
                    0.461111,
                ),
            },
            TimeControlPoint {
                coordinate: (
                    1.0,
                    1.0,
                ),
                handle_offset: (
                    0.191176,
                    1.0,
                ),
            },
        ],
    ),
    reference: None,
}
